# libmemcached

./: .gitignore  CMakeLists.txt  mem_config.in
clients/: memaslap.c  ms_conn.c  ms_setting.c
libmemcached-1.0/: memcached.h  memcached.hpp
libtest/: main.cc
